# loggerLib

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  copy_lib.sh  logger.cpp  logger.hpp  loggerwrapper.cpp  loggerwrapper.hpp
cmake/: LoggerLibConfig.cmake.in  loggerlib.pc.in
example/: main.cpp
include/: logger.h  loggerwrapper.h
src/: logger.cpp  loggerwrapper.cpp
